fix z height issue on mobile

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ body {
     width: 25px;
     padding-left: 10px;
     padding-right: 10px;
-    filter: opacity(0.7);
+    filter: opacity(0.75);
 }
 
 /* #endregion */
@@ -147,6 +147,7 @@ body {
         padding-top: 0;
         padding-left:0;
         align-items: center;
+        z-index: 5;
     }
 
     #links{
